src/test/deca/context/invalid/Obj/decl-methode-typeinconnu.deca
// Description:
//    Déclaration d'une méthode avec un returntype non défini
//
// Résultat:
//Le type de retour de la méthode n'est pas défini
//
class A {
    nondef methode(){
    }
}
{}